--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Foodbook Admin Dashboard</title>
 </head>
 
-<body>
+<body class="dark:bg-gray-900 dark:text-gray-100 bg-gray-100 text-gray-900">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
